Fix unwanted gap of content in filter view

--- a/resources/assets/sass/components/filter-page.scss
+++ b/resources/assets/sass/components/filter-page.scss
@@ -2,6 +2,7 @@
 
 .filter-page {
     &__top-row {
+        height: 47px;
         border-bottom: 1px solid $color-section-bottom-border;
         padding: 0.5em 20px 0;
         background-color: $color-background-secondary;
